# museros

./: CMakeLists.txt  COPYRIGHT
cmake/Modules/: FindCFITSIO.cmake  FindMYSQL.cmake
data/: csrhuvfits_H.xml  muserfitsidi.xml  museruvfits.xml  quietsundisk.txt
db/: create.sql  muser.db
doc/: CSRH-I.doc  CSRH-II数据格式byWWang20150129.doc  CSRHII.xlsx  CSRH_DATA_REQUIREMENTS.doc  quietsundisk2400_4375MHz.txt  quietsundisk400_2375MHz.txt
shell/: museros
src/archive/: pom.xml
src/archive/admin/: pom.xml
src/archive/admin/src/main/java/org/cnlab/common/: Constants.java  ErrorInterceptor.java  MenuItemModel.java  NetworkHelper.java  QueryModel.java  SessionIterceptor.java
src/archive/admin/src/main/resources/: spring-hibernate.xml  spring.xml  struts.xml
src/archive/admin/src/main/webapp/: 404.jsp  error.jsp  index.jsp  login.jsp
src/archive/admin/src/main/webapp/WEB-INF/: web.xml
src/archive/admin/src/main/webapp/css/: style.css
src/archive/admin/src/main/webapp/js/: jquery.easyui.validate.js
src/archive/admin/src/main/webapp/lib/jquery-easyui-1.4.1/: jquery.easyui.min.js
src/archive/admin/src/main/webapp/lib/jquery-easyui-1.4.1/plugins/: jquery.datagrid.js  jquery.pagination.js
src/archive/admin/src/main/webapp/lib/jquery-easyui-1.4.1/src/: jquery.slider.js
src/archive/admin/src/main/webapp/lib/jquery-easyui-1.4.1/themes/: icon.css
src/archive/admin/src/main/webapp/lib/jquery-ui-1.11.2/: jquery-ui.js
src/archive/admin/src/main/webapp/lib/jquery-validation-1.13.1/: jquery.validate.js
src/archive/admin/src/main/webapp/lib/jquery-validation-1.13.1/localization/: messages_zh.min.js  messages_zh_TW.min.js
src/archive/admin/src/main/webapp/subpages/: headerTemplate.jsp  mgrHomePage.jsp  sessionManager.jsp  sysConfigPage.jsp  userManager.jsp  webArticlePage.jsp  webHomePage.jsp  webImagePage.jsp  webMoviesPage.jsp  webSearchPage.jsp  webSolarEventPage.jsp
src/archive/crawler/: pom.xml
src/archive/crawler/src/main/java/org/cnlab/crawler/: Extractor.java  ExtractorRun.java
src/archive/crawler/src/test/java/org/cnlab/crawler/: ExtractorTest.java
src/archive/utils/: pom.xml
src/archive/web/: pom.xml
src/archive/web/src/main/java/org/cnlab/action/: ImageAction.java  IndexAction.java  SolarEventAction.java
src/archive/web/src/main/java/org/cnlab/dao/: IImageDao.java  IIndexDao.java  ISolarEventDao.java  ImageDaoImpl.java  IndexDaoImpl.java  SolarEventDaoImpl.java
src/archive/web/src/main/java/org/cnlab/model/: ImageModel.java  IndexPartsModel.java  MovieModel.java  SolarEventModel.java
src/archive/web/src/main/java/org/cnlab/service/: IImageService.java  IIndexService.java  (+4 more)
src/archive/web/src/main/resources/: config.properties  log4j.properties  spring-hibernate.xml  spring.xml  struts.xml
src/archive/web/src/main/webapp/: 404.jsp  500.jsp  HowTo.jsp  Intro.jsp  Manual.jsp  Meeting.jsp  Policy.jsp  Results.jsp  about.jsp  aboutContent.jsp  archive.jsp  archiveContent.jsp  data.jsp  dataContent.jsp  detail.jsp  detailContent.jsp  event.jsp  eventContent.jsp  footer.jsp  header.jsp  headerPage.jsp  image.jsp  imageContent.jsp  imageDetail.jsp  imageDetailContent.jsp  index.jsp  indexContent.jsp  menu.jsp  movie.jsp  movieContent.jsp  research.jsp  researchContent.jsp
src/archive/web/src/main/webapp/WEB-INF/: web.xml
src/archive/web/src/main/webapp/css/: flexslider.css  style.css  stylePage.css
src/archive/web/src/main/webapp/js/: functions.js  modernizr.custom.js
src/archive/web/src/main/webapp/lib/bootstrap/: moderniz.2.8.1.js
src/archive/web/src/main/webapp/lib/flexlider/: jquery.flexslider-min.js
src/archive/web/src/main/webapp/lib/jquery/: jquery.cookie-1.3.1.js
src/archive/web/src/main/webapp/lib/jquery-ui-1.11.2/: jquery-ui.js
src/archive/web/src/main/webapp/lib/jtable-2.4.0/: jquery.jtable.js  jquery.jtable.min.js
src/ephem/: Ant_pos.txt  ephemms.c
src/fits/: CMakeLists.txt  fastbit.c  fastbit.h  fastbittest.c  muserrawdata.c  muserrawdata.h  muserreaduvfits.c  muserscanrawdata.c  musersumuvfits.c  musersumuvfits.h  musertest.c  museruvfits.c  uvfits.c  uvfits.h
src/fusion/: CMakeLists.txt  fusionClient.c  fusionServer.c
src/python/Pyro4/: __init__.py  configuration.py  constants.py  core.py  futures.py  naming.py  nsc.py  socketutil.py  util.py
src/python/Pyro4/socketserver/: multiplexserver.py  threadpool.py  threadpoolserver.py
src/python/Pyro4/test/: echoserver.py
src/python/Pyro4/utils/: flame.py  flameserver.py
src/python/docker/: marathon-muser.json  marathon.json  start.sh
src/python/monitor/: text.ini
src/python/muserconf/: api.py  browser.py  jsonutil.py  muser.sql
src/python/muserconf/res/: default.css
src/python/muserconf/templates/: about.html  antenna.html  calibration.html  config.html  error.html  file_results.html  imaging.html  index.html  integration.html  integrationResults.html  integrationTasks.html  layout.html  weather.html
src/python/ocscripts/: antennaService.py  bigUvfitsCompWorker.py  bigUvfitsManager.py  bigUvfitsWorker.py  calibrationService.py  conf.py  dirtyWorker.py  errors.py  fitsWorker.py  fusionclient.py  gcleanWorker.py  integrationManager.py  integrationTask.py  integrationWorker.py  kafkaUtils.py  muser-config.ini  oneRawFileUvfitsManager.py  realTimeGPUManager.py  realTimeManager.py  realTimeWorker.py  redisClient.py  rtdclient.py  rtdserver.py  sendFrame.py  sockutils.py  streamframe.py  streamjob.py  streamserver.py  streamsocketserver.py  subtest.py  uvfitsjob.py  weatherService.py  zipWorker.py
src/python/pymuser/: diskdetect.py  env.xml  muserGMM_kernel.py  muserclean.py  muserclean_cl.py  muserdraw_cl.py  muserfilter_cl.py  museriers.py  muserkernel_cl.py  museropencl.py  muserscanraw.py  muserserialclean.py  muserserialgrid.py  muserstatus.py  sgp4gravity.py  sgp4io.py  sgp4model.py  slope.py
src/python/scripts/: clean_cl_cli.py  dispfits_cli.py  ephemeris_cli.py  importraw_cli.py  task_clean.py  task_clean_cl.py  task_dispfits.py  task_ephemeris.py  task_importraw.py  task_listuvfits.py  tasks.py
src/resource/xml/: dispfits.xml  listuvfits.xml
(+279 files in other folders)
